--- a/telegram_bot/locales/ru.json
+++ b/telegram_bot/locales/ru.json
@@ -5,14 +5,27 @@
   },
   "main_menu": {
     "welcome": "👋 Добро пожаловать, {name}!\n\n🎨 **Бот для генерации изображений с ИИ**\n\nЯ помогу вам создать потрясающие изображения с помощью ИИ. Выберите режим:",
-    "btn_free": "🎨 Свободная генерация",
-    "btn_clothes": "👕 Удалить одежду",
-    "btn_nsfw_face": "🔥 NSFW с лицом",
+    "btn_clothes": "📷 СНЯТЬ ОДЕЖДУ",
+    "btn_video": "🎬 NEW Видео оживление NEW",
+    "btn_free_face": "✨ Свободная генерация | Замена лиц",
+    "btn_nsfw_face": "🔞 18 Создание эротики с лицом 18",
+    "btn_balance": "💰 Баланс",
+    "btn_topup": "💳 Пополнение",
+    "btn_help": "🆘 SOS Помощь SOS",
+    "btn_create_bot": "🤖 Создать бота",
+    "btn_free": "🎨 Создать изображение",
     "btn_face_swap": "🔄 Замена лица",
-    "btn_language": "🌐 Изменить язык",
+    "btn_language": "🌐 Сменить язык",
+    "btn_profile": "👤 Профиль",
     "btn_channel": "📢 Канал",
     "btn_support": "❓ Поддержка",
-    "choose_mode": "Выберите режим:"
+    "choose_mode": "Выберите режим:",
+    "style_noir": "🎬 Noir",
+    "style_super_realism": "📸 Super Realism",
+    "style_anime": "✨ Anime",
+    "style_realism": "📸 Реализм",
+    "style_lux": "✨ Люкс",
+    "style_chatgpt": "🤖 ChatGPT"
   },
   "free_generation": {
     "start": "🎨 **Свободная генерация**\n\nОтправьте мне текстовое описание изображения, которое вы хотите создать.\n\nПример: *красивый горный пейзаж на закате, фотореалистично*\n\nИли используйте /start для возврата в главное меню.",
@@ -50,10 +63,11 @@
     "example_selected": "📋 Пример выбран! Теперь выберите стиль:"
   },
   "clothes_removal": {
-    "start": "👕 **Удалить одежду**\n\nОтправьте мне одну фотографию человека в одежде.\n\n⚠️ **Важно:**\n- Фото должно показывать полное тело или верхнюю часть тела\n- Четкое, хорошо освещенное изображение работает лучше\n- Один человек на фото\n\nИли используйте /start для возврата в главное меню.",
+    "start": "👗 **Удалить одежду**\n\nОтправьте мне одну фотографию человека в одежде.\n\n⚠️ **Важно:**\n- Фото должно показывать полное тело или верхнюю часть тела\n- Четкое, хорошо освещенное изображение работает лучше\n- Один человек на фото\n\nИли используйте /start для возврата в главное меню.",
     "photo_received": "✅ Фото получено! Анализирую...",
+    "confirmation": "⚠️ **Подтверждение**\n\nМы удалим одежду максимально анатомично и правдиво. Подтвердите действие?",
     "style_selection": "Выберите выходной стиль:",
-    "processing": "👕 Обрабатываю изображение в стиле **{style}**...\n\n⚙️ Анализирую позу и структуру...\n⏳ Это может занять 60-120 секунд. Пожалуйста, подождите.",
+    "processing": "👗 Обрабатываю изображение в стиле **{style}**...\n\n⚙️ Анализирую позу и структуру...\n⏳ Это может занять 60-120 секунд. Пожалуйста, подождите.",
     "success": "✅ Обработка завершена в стиле **{style}**!",
     "photo_requirements": "📸 **Требования к фото**\n\n✅ Видно полное тело или верхнюю часть\n✅ Четкое, хорошо освещенное изображение\n✅ Один человек в кадре\n✅ Качественное фото\n\n**Советы для лучших результатов:**\n• Естественная стоячая поза работает лучше всего\n• Предпочтительно анфас\n• Хорошее освещение необходимо\n• Рекомендуется высокое разрешение"
   },
@@ -91,6 +105,7 @@
   },
   "errors": {
     "generic": "❌ Произошла ошибка. Пожалуйста, попробуйте снова или используйте /start для возврата в главное меню.",
+    "generic_restart": "❌ Произошла ошибка. Пожалуйста, попробуйте снова или используйте /start для возврата в главное меню.",
     "timeout": "⏱ Время запроса истекло. Генерация заняла слишком много времени.\n\nПожалуйста, попробуйте снова с более простым промптом.",
     "backend_unavailable": "❌ Сервис временно недоступен. Пожалуйста, попробуйте снова через несколько мгновений.",
     "invalid_photo": "❌ Некорректное фото. Пожалуйста, отправьте изображение в формате JPG или PNG.",
@@ -99,17 +114,109 @@
     "processing_failed": "❌ Обработка не удалась: {error}\n\nПожалуйста, попробуйте снова с другим входом.",
     "no_prompt": "❌ Пожалуйста, сначала отправьте текстовый промпт.",
     "invalid_style": "❌ Выбран некорректный стиль. Пожалуйста, выберите из доступных опций.",
-    "max_photos_reached": "⚠️ Достигнут максимум {max} фото. Напишите 'готово' для продолжения."
+    "max_photos_reached": "⚠️ Достигнут максимум {max} фото. Напишите 'готово' для продолжения.",
+    "no_face_detected": "❌ Лицо не обнаружено. Пожалуйста, отправьте четкое фото с видимым лицом."
   },
   "buttons": {
     "back_to_menu": "🔙 Вернуться в меню",
     "cancel": "❌ Отмена",
     "done": "✅ Готово",
-    "retry": "🔄 Попробовать снова"
+    "retry": "🔄 Попробовать снова",
+    "confirm": "✅ Подтвердить"
   },
   "common": {
     "please_wait": "⏳ Пожалуйста, подождите...",
     "processing": "⚙️ Обработка...",
-    "loading": "🔄 Загрузка..."
+    "loading": "🔄 Загрузка...",
+    "back": "🔙 Назад",
+    "choose_mode": "Выберите режим:"
+  },
+  "help": {
+    "title": "🆘 **Нужна помощь?**\n\nЗдесь вы найдете ответы на популярные вопросы и решения проблем.\n\nВыберите раздел:",
+    "generation_problems": "❌ Не работают генерации",
+    "payment_problems": "💳 Проблемы с оплатой",
+    "tech_support": "💻 Тех.Поддержка",
+    "generation_problems_content": "**Возникли проблемы с генерацией? Давайте разберемся!**\n\n• **1. Не работает кнопка:** Если кнопка \"Сгенерировать\" не реагирует, возможно, вы используете устаревшую версию меню. Просто нажмите /start, чтобы обновить меню.\n\n• **2. Отсутствие результата:** Если бот пишет \"начал генерацию\", но ничего не происходит, значит Telegram удалил исходное фото из кэша. Пожалуйста, отправьте фотографию снова и все будет работать.\n\nЕсли проблема сохраняется, обратитесь в техподдержку.",
+    "payment_problems_content": "**Возникли проблемы с оплатой?**\n\n• **1. Платеж не зачислен:**\n  - Подождите 3 минуты, иногда платежи задерживаются.\n  - При оплате в криптовалюте время ожидания до 10 минут.\n  - Если платеж не зачислен, обратитесь в техподдержку.\n\n• **2. Не открывается страница оплаты:**\n  - В некоторых регионах работает только с VPN. Включите VPN и попробуйте снова.\n\nЕсли другая проблема - обратитесь в техподдержку.",
+    "tech_support_content": "**Техническая поддержка**\n\nЕсли у вас возникли проблемы, которые не решаются через раздел помощи, обратитесь в техподдержку.\n\nНаша команда поможет вам решить любые вопросы!",
+    "prompt_guide": "💡 **Как писать хорошие промпты**",
+    "examples": "📋 **Примеры лучших запросов**",
+    "style_guide": "🎨 **Как выбрать стиль**",
+    "limitations": "⚠️ **Ограничения**",
+    "face_improvement": "👤 **Как улучшить лицо**",
+    "prohibited": "🚫 **Что запрещено**",
+    "prompt_guide_content": "Хороший промпт включает:\n\n1. **Субъект** - Кто или что\n2. **Действие/Поза** - Что делает\n3. **Локация** - Где происходит\n4. **Атмосфера** - Настроение\n5. **Детали** - Одежда, освещение, цвета\n\n✨ Будьте конкретны и описательны!",
+    "style_guide_content": "**Доступные стили:**\n\n🎬 **Noir** - Кинематографичный черно-белый стиль\n📸 **Super Realism** - Максимально реалистичный\n✨ **Anime** - Аниме стиль\n📸 **Realism** - Фотореализм\n✨ **Lux** - Роскошный стиль\n🤖 **ChatGPT** - Универсальный стиль",
+    "limitations_content": "**Ограничения:**\n\n• Максимальный размер фото: 10 МБ\n• Минимальное разрешение: 512x512\n• Форматы: JPG, PNG\n• Максимум 5 фото лица\n• Генерация может занять 30-120 секунд",
+    "face_improvement_content": "**Советы для лучших результатов с лицом:**\n\n✅ Четкие фронтальные фото\n✅ Хорошее освещение\n✅ Высокое качество\n✅ Несколько фото (1-5) для лучшей точности\n✅ Избегайте фото в темных очках или с закрытым лицом",
+    "prohibited_content": "**Запрещено:**\n\n❌ Генерация незаконного контента\n❌ Использование чужих фото без разрешения\n❌ Спам и злоупотребление\n❌ Нарушение авторских прав\n\n⚠️ Бот предназначен только для легального использования."
+  },
+  "profile": {
+    "title": "👤 **Профиль**",
+    "balance": "💰 **Баланс:**",
+    "balance_amount": "{amount} ₽",
+    "balance_zero": "0 ₽",
+    "statistics": "📊 **Статистика:**",
+    "total_generations": "Всего генераций: {count}",
+    "free_generations": "Свободная генерация: {count}",
+    "nsfw_generations": "NSFW с лицом: {count}",
+    "clothes_removals": "Удаление одежды: {count}",
+    "history": "📜 **История:**",
+    "no_history": "История пуста",
+    "settings": "⚙️ **Настройки:**",
+    "language": "Язык: {lang}",
+    "default_quality": "Качество по умолчанию: {quality}",
+    "limits": "📋 **Лимиты:**",
+    "no_limits": "Лимиты не установлены"
+  },
+  "balance": {
+    "title": "💰 **Баланс**",
+    "current_balance": "Текущий баланс: {amount} ₽",
+    "topup_title": "💳 **Пополнение баланса**",
+    "topup_info": "При пополнении от 500 ₽ вам будут начислены обработки в подарок 🎁",
+    "topup_warning": "⚠️ СБП QR в первой кнопке (оплата в 1 клик)",
+    "topup_amounts": "Выберите сумму пополнения:",
+    "amount_300": "300 ₽",
+    "amount_500": "500 ₽ (+2 🎁)",
+    "amount_1000": "1000 ₽ (+5 🎁)",
+    "amount_2000": "2000 ₽ (+12 🎁)",
+    "amount_3000": "3000 ₽ (+20 🎁)",
+    "amount_5000": "5000 ₽ (+38 🎁)",
+    "payment_processing": "⏳ Обработка платежа...",
+    "payment_success": "✅ Платеж успешно зачислен!",
+    "payment_failed": "❌ Ошибка при обработке платежа"
+  },
+  "video_animation": {
+    "title": "🎬 **Видео оживление**",
+    "description": "Превратите ваше фото в живое видео с помощью ИИ!",
+    "photo_request": "Пришлите пожалуйста фотографию, которую вы хотите превратить в видео",
+    "photo_guide_link": "📖 Инструкция по выбору фото для оживления",
+    "processing": "🎬 Обрабатываю видео...\n\nЭто может занять 60-120 секунд.",
+    "success": "✅ Видео готово!",
+    "coming_soon": "🚧 Функция \"Видео оживление\" скоро будет доступна!\n\nМы работаем над добавлением этой возможности."
+  },
+  "create_bot": {
+    "title": "🤖 **Создать своего бота**",
+    "description": "Создайте точную копию нашего бота и получайте пассивный доход!",
+    "features": "**Ваш собственный бот — путь к финансовой свободе** ✨\n\nМы предоставляем вам уникальный шанс — создать вашего собственного бота одним кликом! Все технические аспекты, включая серверы и поддержку, мы взяли на себя.",
+    "easy_start": "✅ **Старт с легкостью:**\nПросто нажмите кнопку, и ваш бот готов к работе. Без забот, без лишних трат.",
+    "income": "💰 **Доход, который вы будете получать:**\nВаш бот — это машина для заработка, с каждой транзакции, проведенной через вашего бота, вы будете получать 50%. И в добавок к доходу от клиентов вашего бота, получайте пассивный заработок, расширяйте реферальную сеть.",
+    "referral": "📈 **Реферальная программа:**\nИспользуйте совершенную реферальную систему нашего бота и зарабатывайте больше даже без вашего участия.",
+    "create_button": "🤖 Создать бота",
+    "coming_soon": "🚧 Функция \"Создать бота\" скоро будет доступна!"
+  },
+  "face_swap": {
+    "start": "🔄 **Замена лица**\n\nОтправьте *исходное фото* (откуда взять лицо).\n\nДля отмены используйте /start",
+    "source_received": "✅ Исходное фото получено!\n\nТеперь отправьте *целевое фото* (куда вставить лицо).",
+    "processing": "⏳ Обрабатываю замену лица...\n\nЭто может занять 30-60 секунд.",
+    "success": "✅ Замена лица завершена!",
+    "failed": "❌ Ошибка при замене лица",
+    "coming_soon": "🚧 Функция \"Замена лица\" скоро будет доступна!\n\nМы работаем над добавлением этой возможности."
+  },
+  "result_actions": {
+    "regenerate": "🔄 Сгенерировать снова",
+    "improve_quality": "⬆️ Улучшить качество",
+    "change_style": "🎨 Изменить стиль",
+    "download": "📤 Скачать в оригинале"
   }
 }
