Update main menu welcome text to match competitor

--- a/telegram_bot/locales/en.json
+++ b/telegram_bot/locales/en.json
@@ -4,7 +4,7 @@
     "selected": "✅ Language set to English"
   },
   "main_menu": {
-    "welcome": "👋 Welcome, {name}!\n\n🎨 **AI Image Generation Bot**\n\nI can help you create amazing images using AI. Choose a mode below:",
+    "welcome": "🌴 *Your Personal Paradise* 🌴\n\n💾 [Permanent Bot Link](https://t.me/YourBotName)\n\n📢 Channel - [Neural Network NEWS](https://t.me/YourChannel)\n🤖 Backup Bot - [adult3gptbot](https://t.me/YourReserveBot)\n\n✨ *What can I do?*\n• Remove clothes: 35 ₽\n• Face Generation: 45 ₽\n• Free Generation: 25 ₽\n• Face Swap: 15 ₽\n\n• [Processing Examples](https://t.me/YourExamples)\n• [Model Examples](https://t.me/YourModels)\n\n🔶 [Referral Program.](https://t.me/YourReferralLink)\n• 50% from all top-ups\n• [Referral Chat](https://t.me/YourReferralChat)\n\n📌 [Important Instructions](https://t.me/YourInstructions)\n\n❗ Using the bot is allowed only for persons aged 18+\n🔒 Your photos are processed anonymously and accessible only to you!",
     "btn_clothes": "📷 REMOVE CLOTHES",
     "btn_video": "🎬 NEW Video Animation NEW",
     "btn_free_face": "✨ Free Generation | Face Swap",
