--- a/telegram_bot/locales/ru.json
+++ b/telegram_bot/locales/ru.json
@@ -4,7 +4,7 @@
     "selected": "✅ Язык установлен на Русский"
   },
   "main_menu": {
-    "welcome": "👋 Добро пожаловать, {name}!\n\n🎨 **Бот для генерации изображений с ИИ**\n\nЯ помогу вам создать потрясающие изображения с помощью ИИ. Выберите режим:",
+    "welcome": "🌴 *Твой личный рай* 🌴\n\n💾 [Вечная ссылка на бота](https://t.me/YourBotName)\n\n📢 Канал- [Нейросеть НОВОСТИ](https://t.me/YourChannel)\n🤖 Резерв бот- [adult3gptbot](https://t.me/YourReserveBot)\n\n✨ *Что я могу?*\n• Удалить одежду: 35 ₽\n• Генерация по лицу: 45 ₽\n• Свободная генерация: 25 ₽\n• Замена лица: 15 ₽\n\n• [Примеры обработок](https://t.me/YourExamples)\n• [Примеры моделей](https://t.me/YourModels)\n\n🔶 [Реферальная программа.](https://t.me/YourReferralLink)\n• 50% от всех пополнений\n• [Чат для рефералов](https://t.me/YourReferralChat)\n\n📌 [Важные инструкции](https://t.me/YourInstructions)\n\n❗ Использование бота разрешено только лицам, достившим 18+ лет\n🔒 Ваши фото обрабатываются анонимно и доступны только вам!",
     "btn_clothes": "📷 СНЯТЬ ОДЕЖДУ",
     "btn_video": "🎬 NEW Видео оживление NEW",
     "btn_free_face": "✨ Свободная генерация | Замена лиц",
