Update clothes removal start text to match screenshot

--- a/telegram_bot/locales/ru.json
+++ b/telegram_bot/locales/ru.json
@@ -63,7 +63,7 @@
     "example_selected": "📋 Пример выбран! Теперь выберите стиль:"
   },
   "clothes_removal": {
-    "start": "👗 **Удалить одежду**\n\nОтправьте мне одну фотографию человека в одежде.\n\n⚠️ **Важно:**\n- Фото должно показывать полное тело или верхнюю часть тела\n- Четкое, хорошо освещенное изображение работает лучше\n- Один человек на фото\n\nИли используйте /start для возврата в главное меню.",
+    "start": "👗 **Помните о рекомендациях из инструкции для достижения наилучшего результата**\n\nОтправьте фото девушки, и я его обработаю\n\nИли используйте /start для возврата в главное меню.",
     "photo_received": "✅ Фото получено! Анализирую...",
     "confirmation": "⚠️ **Подтверждение**\n\nМы удалим одежду максимально анатомично и правдиво. Подтвердите действие?",
     "style_selection": "Выберите выходной стиль:",
